chapel-lang.org/docs/2.9/_sources/modules/packages/URL.rst.txt
.. default-domain:: chpl

.. module:: URL
   :synopsis: Download data from a URL or upload data to a URL.

URL
===
**Usage**

.. code-block:: chapel

   use URL;


or

.. code-block:: chapel

   import URL;



Download data from a URL or upload data to a URL.

For example, the following program downloads a web-page from http://example.com and outputs each line to stdout:

.. literalinclude:: ../../../../test/library/packages/URL/doc-examples/example_read_url.chpl
 :language: chapel
 :start-after: START_EXAMPLE
 :end-before: STOP_EXAMPLE

.. note::

  This module is currently implemented using :mod:`Curl`. As such, please see
  the :mod:`Curl` documentation to see which protocols are available.

 

.. function:: proc openUrlReader(url: string, param locking = true, region: range(?) = 0..): fileReader(locking) throws

   
   
   Open a fileReader from a particular URL.
   
   :arg url: which URL to open (for example, "http://example.com").
   :arg locking: compile-time argument to determine whether or not the
                 channel should use locking; sets the
                 corresponding parameter of the :record:`~IO.fileReader` type.
                 Defaults to true, but when safe, setting it to false
                 can improve performance.
   :arg region: zero-based byte offset indicating where in the file the
                fileReader should read. Defaults to ``0..`` - meaning from the
                start of the file to no end point.
   :returns: an open fileReader to the requested resource.
   
   :throws SystemError: If a fileReader could not be returned.
    

.. function:: proc openUrlWriter(url: string, param locking = true, region: range(?) = 0..): fileWriter(locking) throws

   
   
   Open a fileWriter to a particular URL.
   
   :arg url: which URL to open (for example, "ftp://127.0.0.1/upload/test.txt")
   :arg locking: compile-time argument to determine whether or not the
                 fileWriter should use locking; sets the
                 corresponding parameter of the :record:`~IO.fileWriter` type.
                 Defaults to true, but when safe, setting it to false
                 can improve performance.
   :arg region: zero-based byte offset indicating where in the file the
                fileWriter should write. Defaults to ``0..`` - meaning from the
                start of the file to no end point.
   :returns: an open fileWriter to the requested resource.
   
   :throws SystemError: If a fileWriter could not be returned.
   

